# ESP32

./: CMakeLists.txt  README.md  WIFI_demo.code-workspace  partitions-16MiB.csv  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/IIC/: iic.c  iic.h
components/BSP/RGBLCD/: ltdc.c  ltdc.h  ltdcfont.h
components/BSP/TOUCH/: gt9xxx.c  gt9xxx.h  touch.c  touch.h
components/BSP/UART/: UART.c  UART.h
main/: CMakeLists.txt  main.c  main.h
main/APP/: LVGL.c  LVGL.h  LVGL_NXP.c  LVGL_NXP.h  MYLVGL.c  MYLVGL.h  WIFI.c  WIFI.h  freertos_demo.c  freertos_demo.h  http_weather.c  http_weather.h  lvgl_demo.c  lvgl_demo.h  mqtt_alilot.c  mqtt_alilot.h  myhttp.c  myhttp.h  ntp_time.c  ntp_time.h  sensor.c  sensor.h
main/LVGL/: events_init.c  events_init.h  gui_guider.c  gui_guider.h  lvgl_ui.c  lvgl_ui.h  setup_scr_app.c  setup_scr_camera.c  setup_scr_control.c  setup_scr_login.c  setup_scr_music.c  setup_scr_screen.c  setup_scr_weather.c  widgets_init.c  widgets_init.h
main/LVGL/analogclock/: lv_analogclock.h
main/LVGL/dclock/: lv_dclock.c  lv_dclock.h
main/LVGL/guider_customer_fonts/: lv_customer_font_SourceHanSerifSC_Regular_20.c  lv_customer_font_SourceHanSerifSC_Regular_30.c  lv_customer_font_SourceHanSerifSC_Regular_60.c
main/LVGL/guider_fonts/: fonts_list.mk  lv_font_Alatsi_Regular_28.c  lv_font_Amiko_Regular_35.c  lv_font_Amiko_Regular_38.c  lv_font_Amiko_Regular_40.c  lv_font_Amiko_Regular_45.c  lv_font_SourceHanSerifSC_Regular_21.c  lv_font_SourceHanSerifSC_Regular_22.c  lv_font_SourceHanSerifSC_Regular_46.c  lv_font_SourceHanSerifSC_Regular_53.c  lv_font_montserratMedium_28.c  lv_font_montserratMedium_60.c
main/LVGL/images/: _back_47x38.c  _back_alpha_50x50.c  _camera_77x70.c  _camera_77x77.c  _camera_alpha_90x80.c  _sleep_75x50.c  (+14 more)
(+8 files in other folders)
