idf_component_register(
    SRC_DIRS 
        "." 
        "APP"
        "LVGL_demo/src/generated"
        "LVGL_demo/src/custom"
        "LVGL_demo/src/custom"
        "LVGL_demo/analogclock"
        "LVGL_demo/dclock"
        "LVGL_demo/src/generated/guider_fonts"
        "LVGL_demo/src/generated/guider_customer_fonts"
        "LVGL_demo/src/generated/images"

    INCLUDE_DIRS 
        "."
        "APP" 
        "LVGL_demo/src/generated"
        "LVGL_demo/src/custom"
        "LVGL_demo/src/generated/guider_fonts"
        "LVGL_demo/src/generated/images"
        "LVGL_demo/src/generated/guider_customer_fonts"
        "LVGL_demo/analogclock"
        "LVGL_demo/dclock")


